ui/css/treeherder.css
/* ... */
#jobFilterValue {
    width: 150px;
}

#jobFilterChoiceValue {
    width: 150px;
}

#jobFilterField {
    width: 200px;
}

.field-filter-form {
    border-top: 2px solid lightgray;
    margin-top: 5px;
    padding: 3px;
    background-color: lightgray;
}

.field-filter {
    margin: 3px;
}

.field-filter a, .th-option-heading a {
    color: white;
    cursor: pointer;
}

.field-filter-placeholder a {
    cursor: pointer;
}

/**
  sheriff panel
*/
.add-new-exclusion input.ng-invalid.ng-dirty{border-color: #B94A48;}

/**
  Failures
*/

.th-failures-box {
    position: fixed;
    top: 46px;
    right:0px;
    padding:2px;
}

.th-failures-box li{
    background-color: #222;
    color: #999;
    border-color: #080808;
}
.th-failures-box li a{
    color: #428bca;
}

.view-nav {
    background-color: #353f47;
}

.view-nav a {
    color: lightgray;

}

/*
    Resultsets
*/

.th-revision-btn {
    margin-left: 10px;
    width: calc(100% - 170px);
}

.th-action-button span.dropdown:hover ul.dropdown-menu{
    display: block;
}

.th-action-button:after {
  content: none;
}

.th-rs-loading {
    width: 50px;
    display: inline-block;
    height: 35px;
    margin-bottom: -14px;
    margin-left: 5px;
}

.revision {
    font-size: 12px;
    padding-top: 2px;
    overflow: auto;
}

.revision > a:first-child {
    float: left;
    width: 7.5em;
    padding-top: 2px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.platform {
    font-size: 12px;
    padding-left: 0;
    padding-right: 5px;
    width: 14.5em;
    min-width: 14.5em;
    overflow: hidden;
    vertical-align: top;
}

.job-row {
    display: table-cell;
    white-space: normal;
    word-break: normal;

}

.result-set {
    padding-bottom: 0px;
    margin-left: 0;
    margin-top: 2px;
    white-space: normal;
    width: 100%;
    border-top: 1px solid lightgrey;
    padding-left: 15px;
    padding-right: 15px;
    position: relative;
}

.result-set-title-left, .result-set-buttons, .result-counts {
    flex: none;
    -webkit-flex: none;
    padding-left: 10px;
    padding-right: 10px;
}

.result-set-title {
    border-top: 1px solid black;
    padding: 2px 0px 0px 0px;
    white-space: nowrap;
    display: flex;
    display: -webkit-flex;
    -webkit-flex-flow: row wrap;
    flex-flow: row wrap;
}

.result-set-title-left {
    padding-top: 5px;
}

.result-set .revision-list {
    padding-left: 0;
}

/* Cancel all jobs custom icon size */
.glyphicon-minus-sign {
    font-size: 85%;
}

.revision-text {
    overflow: hidden;
    text-overflow: ellipsis;
    width: 95px;
    display: inline-block;
    vertical-align: middle;
}

.revision-button {
    flex: 0 0 60px;
}

.revision-list {
    overflow: hidden;
    white-space: nowrap;
}

.result-set .job-list-pad-left {
    padding-left: 8;
    padding-right: 0;
}

.job-list-pad-left table {
    width: 100%;
}

.job-list-pad-left table tr {
    border-bottom: 1px dotted lightgrey;
}

.job-list-pad-left table tr:nth-child(even) {
    background: #f8f8f8;
}

.result-set .job-list-nopad {
    padding-left: 0;
    padding-right: 0;
    display: block;
}

.selected-job {
    border: 5px solid;
}

.job-group {
    margin: 0 -3px 0 3px;
}

.job-btn {
  padding: 0 2px 0 2px;
  vertical-align: 0;
  line-height: 1.32;
}

.table-super-condensed thead > tr > th,
.table-super-condensed tbody > tr > th,
.table-super-condensed tfoot > tr > th,
.table-super-condensed thead > tr > td,
.table-super-condensed tbody > tr > td,
.table-super-condensed tfoot > tr > td {
    padding: 2px;
    font-size: .9em;
}

/*
 * resizer
 */
div#bottom-panel-resizer {
    display: flex;
    flex: none;
    -webkit-flex: none;
    background-color: #42484F;
    cursor: ns-resize;
    height: 4px;
}


/*
 * bottom panel
 */

div#bottom-panel {
    background-color: #AAAAAA;
    font-size: 12px;

    max-height: 35%;
    flex: none;
    -webkit-flex: none;

    display: -webkit-flex;
    display:         flex;
    -webkit-flex-flow: column;
    flex-flow: column;
}

div#bottom-panel .navbar{
    border-radius: 0px;
    border-style: solid;
    border-color: #42484F;
    border-width:1px 0;
    height:33px;
    margin:0;
    font-size:12px;
    min-height: 33px;
    min-width: initial;
    z-index: 100;
}

div#bottom-panel .navbar-nav > ul{
    height:32px;
}

div#bottom-panel .navbar-nav > li > a{
    padding: 6px 15px;
    line-height: 19px;
}

div#bottom-panel .navbar-nav > li > a.disabled {
    cursor: not-allowed;
    text-decoration: none;
}

div#bottom-panel ul.bottom-panel-controls{
    border-right: 1px solid #42484F;
}

div#bottom-panel .navbar-nav > li.active a,
div#bottom-panel .navbar-nav > li.active a:hover,
div#bottom-panel .navbar-nav > li.active a:focus {
    box-shadow: inset 0px 2px 0px;
    outline: 0;

}

div#bottom-panel .navbar > ul.tab-headers > li{
    border-right: 1px solid #42484F;
}

.navbar.navbar-dark{
    background-color: #252C33;
    color: #CED3D9;
}

.navbar.navbar-dark .navbar-nav > li > a{
    color: #9FA3A5;
}

.navbar.navbar-dark .navbar-nav > li > a:hover,
.navbar.navbar-dark .navbar-nav > li > a:focus {
    background-color: #1E252B;
    color: #D3D8DA;
}

div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a,
div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:hover,
div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:focus {
    background-color: #1A4666;
    color: #EEF0F2;
}

div#bottom-panel .navbar-nav.pull-right li a,
div#bottom-panel .navbar-nav.pull-right li a:hover,
div#bottom-panel .navbar-nav.pull-right li a:focus{
    font-size: 12px;
    line-height: 8px;
}

#bottom-panel-content {
   position: relative; /* So we can absolutely position the loading overlay */
   height: 270px;

   flex: auto;
   -webkit-flex: auto;

   display: -webkit-flex;
   display:         flex;
   -webkit-flex-flow: row;
           flex-flow: row;
}
/* ... */

